<resources>
    <string name="app_name">Flashcards</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Menu -->
    <string name="alarm">Alarm</string>
    <string name="settings">Settings</string>
    <string name="manage_collections">Manage Collections</string>
    <string name="manage_questions">Manage Questions</string>

    <!-- Alarm -->
    <string name="title_alarm_activity">Alarm</string>
    <string name="alarm_button_text">SET ALARM</string>
    <string name="alarm_date_hint">Choose a date</string>
    <string name="alarm_time_hint">Choose a time</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="time_format">HH:mm</string>
    <string name="date_time_format">yyyy-MM-dd HH:mm</string>
    <string name="date_empty">The date is required</string>
    <string name="time_empty">The time is required</string>
    <string name="date_is_before">The date cannot be before the current time</string>
    <string name="alarm_content">Hey, time to continue your study</string>

    <!-- Manage Collections -->
    <string name="title_activity_manage_collections">Manage Collections</string>
    <string name="collection_name">Collection name</string>
    <string name="add_collection">Add Collection</string>
    <string name="collection_added">Collection added!</string>
    <string name="back">Back</string>

    <!-- Manage Questions -->
    <string name="title_activity_manage_questions">Manage Questions</string>
    <string name="question">Question</string>
    <string name="question_answer">Answer</string>
    <string name="add_question">Add Question</string>
    <string name="save_question">Save</string>
    <string name="delete_question">Delete</string>
    <string name="question_added">Question added!</string>
    <string name="question_saved">Question saved!</string>
    <string name="question_deleted">Question deleted!</string>

    <!-- Edit Question -->
    <string name="title_activity_edit_question">Edit Question</string>

    <!-- Play Activity -->
    <string name="play_answer">Answer</string>
    <string name="play_OK">OK</string>
    <string name="play_next">Next</string>
    <string name="play_reset">Reset</string>
    <string name="play_result">Result:</string>
    <string name="play_back_to_home">Back to home</string>
    <string name="play_no_question">No question in this collection!</string>

    <!-- Preference Titles -->
    <string name="appearance_header">Appearance</string>

    <!-- Sync Preferences -->
    <string name="darkTheme_title">Dark theme</string>
    <string name="fontSize_title">Font size</string>
    <string name="fontSize_summary">Set your font size</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>