<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmActivity">

    <LinearLayout
        android:id="@+id/linearLayoutAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/time_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/alarm_time_hint"
            android:inputType="none"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/date_input"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:hint="@string/alarm_date_hint"
            android:inputType="none"
            android:paddingLeft="5dp" />

        <Button
            android:id="@+id/btnSetAlarm"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_button_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>